        PR target/46432         * config/v850/v850.h (ASM_OUTPUT_REG_PUSH, ASM_OUTPUT_REG_POP): Delete.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@166754 138bc75d-0d04-0410-961f-82ee72b054a4